Added i18n/l10n patch from Malin Nicolas; Jira #OFBIZ-312
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5291 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels_fr.properties
+++ b/applications/accounting/config/AccountingUiLabels_fr.properties
@@ -7,28 +7,59 @@ en=Anglais
 fr=Fran\u00e7ais
 de=Allemand
 
+AcctgGlPartyLabel=Acteur GL : 
+AcctgGlAcctLabel=Compte GL : 
+AcctgEditGlJournalEntry=Edition des entr\u00e9es GL du journal
+AcctgAssignGlAccount=Assignation du compte GL
+AcctgChartOfAcctsTabMenu=Menu d\u00e9taill\u00e9 du plan comptable
+AcctgListGlAcctOrg=Inscription de l'organisation du compte GL
+AcctgNavigateAccts=Navigation dans les comptes
+AcctgGlFiscalTypeLable=Label du type fiscal GL : 
+AcctgGlJrnlDescLabel=Label de description :
+AcctgGlJrnlIdLabel=Label de l'identifiant du journal : 
+AcctgGlJrnlIdToolTip=Morceaux d'outil de l'identifiant du journal GL
+
+ListAccounts=List Gl Accounts
+
+AccountingAccount=Compte
 AccountingAccountId=Id du Compte
 AccountingAccountLimit=Limite facturaction
 AccountingAccountNumber=Num\u00e9ro de compte
 AccountingAccountType=Type de compte 
+AccountingAddNewCreditCard=Ajouter une nouvelle carte de cr\u00e9dit
+AccountingAddNewEftAccount=Ajouter un nouveau compte Eft
+AccountingAgreement=Accord
+AccountingAgreementDate=Date de 
+AccountingAgreementId=Identifiant d'accord
+AccountingAgreementItemSeqId=Article d'accord de l'identifiant de la s\u00e9quence
+AccountingAgreementItems=Articles d'accord
+AccountingAgreementTerms=Termes d'accord
+AccountingAgreementTermId=Identifiant du terme d'accord
+AccountingAgreementTypeId=Identifiant de type d'accord
+AccountingAgreements=Accords
 AccountingAmount=Montant
 AccountingAnyInvoiceStatus=Tous statut facture
 AccountingAnyPaymentMethod=Toutes m\u00e9thode de Paiement
 AccountingAnyPaymentStatus=Tous statut Paiement
+AccountingAssets=Actifs
+AccountingBalanceSheet=Bilan
 AccountingBankName=Nom de la Banque
+AccountingBilling=Facture
 AccountingBillingAccount=Compte de facturation
 AccountingBillingAccountInvoices=Factures d'un compte de facturation
 AccountingBillingAccountOnly=Paiement exclusivement sur un compte de facturation
 AccountingBillingAccountPayments=Paiements compte de facturation
 AccountingBillingAccounts=Comptes de facturation
 AccountingBillingAcct=Compte de facturation
+AccountingBillingAddress=Adresse de facturation
 AccountingBillingContactMechId=Id Coordonn\u00e9es
-AccountingBilling=Facture
 AccountingBillingInformation=Information comptable
+AccountingBillingMenu=Menu de facturation
 AccountingBillUpTo=A payer \u00e0
 AccountingBothInvoiceIdBillingAccountIdEmptyError=La facture et le compte de facturation ne peuvent \u00eatre vide tout les deux
 AccountingCardNumber=Num\u00e9ro de carte
 AccountingCardType=Type de carte
+AccountingChartOfAcctsMenu=Diagramme du menu de comptabilit\u00e9
 AccountingComments=Commentaires
 AccountingCompanyName=OFBiz: Gestion comptable
 AccountingCompanyNameAccount=Nom de la soci\u00e9t\u00e9 sur le compte
@@ -47,8 +78,10 @@ AccountingCreatePaymentPermissionError=Erreur s\u00e9curit\u00e9 : pour saisir u
 AccountingCreatePermissionError=Erreur s\u00e9curit\u00e9 : pour cr\u00e9er un compte de facturation, il faut avoir la permission ACCOUNTING_CREATE ou ACCOUNTING_ADMIN.<br>
 AccountingCreditCard=Carte de cr\u00e9dit
 AccountingCurrency=Devise
+AccountingDataExchange=Echange de donn\u00e9es
 AccountingDate=Date Comptable
 AccountingDateFilter=Date de sortie
+AccountingDebitCreditMustEqual=Le mondant du \u00e9bit et du cr\u00e9dit doivent \u00ea \u00e9gaux
 AccountingDeleteBillingAccountTermPermissionError=Erreur s\u00e9curit\u00e9 : pour supprimer un terme de compte de facturation, il faut avoir la permission ACCOUNTING_DELETE ou ACCOUNTING_ADMIN.<br>
 AccountingDescription=Description
 AccountingDueDate=Date de facture
@@ -56,37 +89,62 @@ AccountingEditPayment=Edition des Paiements
 AccountingEffective=%Effective%
 AccountingEffectiveDate=Date Effective
 AccountingEFTAccount=R\u00e9f\u00e9rence bancaire
+AccountingEquities
 AccountingExpirationDate=Date d'expiration
 AccountingFindInvoices=Factures trouv\u00e9es
 AccountingFindPayments=Paiements trouv\u00e9s
 AccountingFirstNameCard=Pr\u00e9nom sur la carte
+AccountingFixedAsset=Immobilisation
+AccountingFixedAssetCalendar=Calendrier d'immobilisation
+AccountingFixedAssetEdit=Edition d'immobilisation
+AccountingFixedAssetId=Identifiant d'immobilisation
+AccountingFixedAssetName=Nom de l'immobilisation
+AccountingFixedAssetParent=Parent de l'immobilisation
+AccountingFixedAssetParties=Parties de l'immobilisation
+AccountingFixedAssetProductNew=Nouveau produit d'immobilisation
+AccountingFixedAssetProductType=Type de produit d'immobilisation
+AccountingFixedAssetProducts=Produits d'immobilisation
+AccountingFixedAssetProductTypeId=Identifiant du type du produit d'immobilisation
+AccountingFixedAssetRollUp=D\u00e9roulement d'immobilisation
+AccountingFixedAssetTypeId=Identifiant du type d'immobilisation
+AccountingFixedAssets=Immobilisations
 AccountingFromParty=De l'acteur
 AccountingFromPartyId=De l'acteur ref.
 AccountingGlAcc=Comptes comptables
 AccountingHideFields=Champ cach\u00e9
+AccountingIncomeStatement=d\u00e9claration de revenu
 AccountingInformation=Information Comptable
-AccountingInvoiceDate=Date de facture
 AccountingInvoice=Facture
+AccountingInvoiceDate=Date de facture
 AccountingInvoiceID=ID de la facture
 AccountingInvoiceItem=Ligne de facture
 AccountingInvoiceItems=Lignes de Facture
-AccountingInvoices=Factures
-AccountingInvoicesFound=Factures trouv\u00e9es
 AccountingInvoicePayments=Paiements facture
 AccountingInvoiceTotal=Total de la facture
+AccountingInvoices=Factures
+AccountingInvoicesFound=Factures trouv\u00e9es
+AccountingInvoicesMenu=Menu de factures
 AccountingLastNameCard=Nom sur la carte
+AccountingLiabilities=Dettes
 AccountingLineTotal=Total de la ligne
 AccountingLookupInvoices=Factures recherch\u00e9es
 AccountingLookupPayment=Paiement recherch\u00e9
-AccountingMainPageNote=NOTE: Cette application est en cours de construction, vous pouvez tout regarder sans risque.
+AccountingMainMenu=Menu principal
 AccountingMainPage=Page principale Gestion des comptes comptables
+AccountingMainPageNote=NOTE : Cette application est en cours de construction, vous pouvez tout regarder sans risque.
 AccountingManagerApplication=Application de Gestion des comptes comptables
+AccountingManualTxMenu
 AccountingMethod=M\u00e9thode
 AccountingMiddleNameCard=Deuxi\u00e8me pr\u00e9nom sur la carte
 AccountingName=Nom
 AccountingNameAccount=Nom sur le compte
+AccountingNetIncome=Revenu net
 AccountingNewAccount=Nouveau compte
-AccountingNewPayment=Nouveau Paiement
+AccountingNewAgreement=Nouvel accord
+AccountingNewAgreementItem=Nouvel article d'accord
+AccountingNewAgreementTerm=Nouveau terme d'accord
+AccountingNewFixedAsset=Nouvelle immobilisation
+AccountingNewPayment=Nouveau paiement
 AccountingNoAccount=Aucun compte
 AccountingNoBillingAccount=Aucun compte de facturation
 AccountingNoBillingAccountFound=Il n'y a pas de compte de facturation.
@@ -95,13 +153,16 @@ AccountingNoBillingAccountTerm=Aucun terme pour ce compte.
 AccountingNocontactinformationset=Aucune coordonn\u00e9e selectionn\u00e9e
 AccountingNocurrentinvoicelineitems=Pas de ligne de facture s\u00e9lectionn\u00e9e
 AccountingNoInvoicesFound=Pas de facture trouv\u00e9e
-AccountingNoPaymentsfound=Pas de paiement trouv\u00e9
 AccountingNoPaymentMethods=Il n'y a aucune m\u00e9thode de paiement renseign\u00e9e.
+AccountingNoPaymentsfound=Pas de paiement trouv\u00e9
 AccountingOfflinePayment=Paiement diff\u00e9r\u00e9
 AccountingOrders=Commandes
-AccountingPaymentDate=Date de paiement
+AccountingPartyIdFrom=Identifiant d'acteur de
+AccountingPartyIdTo=Identifiant d'acteur \u00e0
+AccountingPartyMustBeInternalOrganization=L'acteur doit \u00eatre l'organisation interne
 AccountingPayment=Paiement
 AccountingPaymentAlreadyReceived=Paiement d\u00e9j\u00e0 re\u00e7u
+AccountingPaymentDate=Date de paiement
 AccountingPaymentID=R\u00e9f\u00e9rence du Paiement
 AccountingPaymentInformation=Information sur le moyen de paiement
 AccountingPaymentMethodId=R\u00e9f\u00e9rence de m\u00e9thode de paiement
@@ -109,20 +170,31 @@ AccountingPaymentMethodType=Type de m\u00e9thode de paiement
 AccountingPaymentPreferenceId=Param\u00e8tre de paiement
 AccountingPayments=Paiements
 AccountingPaymentsFound=Paiement(s) trouv\u00e9 (s)
+AccountingPaymentsMenu=Menu des paiements
+AccountingPaymentsReceived=Paiements recus
+AccountingPaymentsSend=Paiements envoy\u00e9s
 AccountingPaymentType=Moyen de Paiement
 AccountingPleaseSendPaymentTo=Merci d'envoyer le paiement \u00e0 :
 AccountingPrefixCard=Pr\u00e9fixe sur la carte
 AccountingProduct=Produit
+AccountingProductId=Identifiant de produit
 AccountingQuantity=Quantit\u00e9
 AccountingReceivePayment=Recevoir le paiement
 AccountingReferenceNumber=Nombre de r\u00e9f\u00e9rence
+AccountingReports=Rapports
+AccountingRoleTypeIdFrom=Identifiant du type de role de
+AccountingRoleTypeIdTo=Identifiant du type de role \u00e0
 AccountingRoutingNumber=Num\u00e9ro de routage
 AccountingStatus=Statut
 AccountingSuffixCard=Suffixe sur la carteAccountingAccount=Compte
+AccountingTermTypeId=Identifiant du type de terme
+AccountingTextData=Donn\u00e9es de texte
+AccountingThruDate=jusqu'\u00e0 la date
 AccountingToParty=A l'acteur
 AccountingToPartyId=A la r\u00e9f. de l'acteur
 AccountingTotal=Total
 AccountingType=Type
+AccountingUpdateAvailability=Disponibilit\u00e9 de mise \u00e0 jour
 AccountingUpdateBillingAccount=Mise \u00e0 jour d'un compte de facturation
 AccountingUpdateBillingAccountPermissionError=Erreur s\u00e9curit\u00e9 : pour \u00e9diter un compte de facturation, il faut avoir la permission ACCOUNTING_UPDATE ou ACCOUNTING_ADMIN.<br>
 AccountingUpdateBillingAccountRolePermissionError=Erreur s\u00e9curit\u00e9 : pour \u00e9diter une association d'un r\u00f4le \u00e0 un compte de facturation, il faut avoir la permission ACCOUNTING_UPDATE ou ACCOUNTING_ADMIN.<br>
@@ -133,7 +205,8 @@ AccountingViewPermissionError=Vous n'avez pas la permission de voir cette page. 
 CommonAccounting=Comptabilit\u00e9
 CommonAttn=A l'Attention de 
 CommonCreateNew=Nouveau
-CommonEdit=Edit
+CommonEdit=Editer
+CommonFind=Trouver
 CommonFromDate=de la date
 CommonFrom=De
 CommonLogin=Connexion
@@ -145,17 +218,18 @@ CommonNotModifRecreat=ne peut-\u00eatre modifi\u00e9 sauf re-cr\u00e9ation
 CommonPassword=Mot de passe:
 CommonPrevious=Pr\u00e9c\u00e9dent 
 CommonRegistred=Enregistrement connexion utilisateur
-CommonRemove=Supp.
-CommonSave=Enrg
+CommonRemove=Suprimer
+CommonSave=Enregistrer
 CommonSet=Action
 CommonShowLookupFields=Montrer les champs de recherche
+CommonSubmit=Soumettre
 CommonTest=Test en fran\u00e7ais
 CommonThruDate=jusqu'\u00e0 la date
 CommonThru=Jusqu'\u00e0
 CommonTo= Jusqu'\u00e0
-CommonUom=UOM
+CommonUom=Uom
 CommonUpdate=Mettre \u00E0 jour
-CommonUsername=Nom d'utilisateur:
+CommonUsername=Nom d'utilisateur : 
 CommonValue=Valeur
 CommonView=Voir
 CommonWelcome=Bonjour 
@@ -166,9 +240,12 @@ PageTitleEditBillingAccountPayments=Edition de factures d'un compte de facturati
 PageTitleEditBillingAccountRoles=Association de clients au compte de facturation
 PageTitleEditBillingAccountTerms=Edition des termes des comptes de facturation
 PageTitleEditGlAccount=Edition d'un compte comptable
+PageTitleEditGlobalGlAccount=Edition d'un compte comptable global
 PageTitleFindBillingAccount=Recherche compte(s) de facturation
 PageTitleFindGlAccount=Recherche compte(s) comptable
 PageTitleLogin=Connexion
+PageTitleLookupFixedAsset=Consultation d'immobilisation
+PageTitleLookupProduct=Consultation de produit
 PageTitleMain=Page principale
 PartyPartyId=R\u00e9f. de l'acteur
 PartyRoles=R\u00f4les
@@ -177,3 +254,14 @@ PartyTerms=Termes
 PartyTerm=Terme
 PartyTermType=Type de terme
 PartyTermValue=Valeur du terme
+
+Organization=Organisation
+FromTimePeriod=de la p\u00e9riode
+ThruTimePeriod=jusqu'\u00e0 la p\u00e9riode
+GlFiscalType=Type fiscal
+isClosed=est ferm\u00e9(e)
+isNotClosed=n'est pas ferm\u00e9(e)
+TimePeriod=P\u00e9riode
+ByTimePeriod=Par p\u00e9riode
+ByDate=Par date
+AsOf=A partir de
