Applied i18n and l10n patch from Jacques Le Roux (OFBIZ-338).
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5312 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels_fr.properties
+++ b/applications/product/config/ProductUiLabels_fr.properties
@@ -220,7 +220,7 @@ ProductAisle=All\u00E9e
 ProductAlternate=Remplacement
 ProductAlternateKeyWordThesaurus=Th\u00E9saurus de mots cl\u00E9s de remplacement
 ProductAmount=Montant
-ProductAmountUomTypeId=Unit\u00E9 du montant
+ProductAmountUomTypeId=Unit\u00E9 de la quantit\u00E9 demand\u00E9e
 ProductAndApplyFeaturesToProductWithId=Et applique les caract\u00E9ristiques \u00E0 l'article r\u00E9f\u00E9renc\u00E9
 ProductAndContainer=Et emplacement
 ProductAndQuantityOnHand=Et quantit\u00E9 disponible
@@ -596,6 +596,7 @@ ProductNewSegment=Nouveau segment
 ProductNewShipment=Nouvelle exp\u00E9dition
 ProductNewShipmentEstimate=Nouveau devis d'exp\u00E9dition
 ProductNewShipmentMethod=Nouvel exp\u00E9diteur
+ProductNewVirtualProduct=Nouvel article virtuel
 ProductNextShipment=Prochaine exp\u00E9dition
 ProductNoCategorySpecified=Pas de cat\u00E9gorie sp\u00E9cifi\u00E9e
 ProductNoChildCategoriesFound=Cat\u00E9gorie enfant non trouv\u00E9e
@@ -676,7 +677,7 @@ ProductOriginPostalAddressId=Adresse postale d'origine
 ProductOriginPhoneNumberId=N\u00B0 de t\u00E9l
 ProductOutgoingProductionRuns=Cadences de production sortantes
 ProductOutgoingShipments=Exp\u00E9ditions sortantes
-ProductOverride=Changement du mot cl\u00E9
+ProductOverride=Changement de mot cl\u00E9
 ProductOverrideSimpleFields=Mise \u00E0 jour des champs descriptifs de la fiche article
 ProductPackage=Paquet
 ProductPackages=Paquets
@@ -724,7 +725,7 @@ ProductProdCatContentTypeId=Type de contenu de cat\u00E9gorie
 ProductProduct=Article
 ProductProductCatalogsList=Liste des catalogues d'article
 ProductProductCategory=Cat\u00E9gorie d'articles
-ProductProductCategoryId=R\u00E9f\u00E9rence d'une cat\u00E9gorie d'article
+ProductProductCategoryId=R\u00E9f\u00E9rence de la cat\u00E9gorie d'article
 ProductProductCategoryMemberMaintenance=Articles r\u00E9f\u00E9renc\u00E9s dans cette cat\u00E9gorie (\u00E9dition)
 ProductProductCategoryType=Type de cat\u00E9gorie d'article
 ProductProductConfigItemContentTypeId=Product Config Item Content Type Id
@@ -737,7 +738,7 @@ ProductProductHeight=Hauteur
 ProductProductId=R\u00E9f. de l'article
 ProductProductIdMissing=Le champ r\u00E9f\u00E9rence de l'article est vide, il est obligatoire
 ProductProductIdTo=R\u00E9f d'article associ\u00E9
-ProductProductJump=Recherche par
+ProductProductJump=Aller directement \u00E0 la rubrique
 ProductProductName=Nom de l'article
 ProductProductNameId=Nom de l'article
 ProductProductNoLongerAvailable=Cet article n'est plus disponible \u00E0 la vente
@@ -790,6 +791,7 @@ ProductQuantityUomId=R\u00E9f pour l'unit\u00E9 de quantit\u00E9
 ProductQuestion=Question
 ProductQuickAddVariants=Ajout rapide d'une variante
 ProductQuickAdmin=Admin. Rapide
+ProductQuickCreateVirtualFromVariants=Cr\u00E9ation rapide d'un article virtuel depuis des variantes
 ProductQuickShipOrder=Exp\u00E9dition express
 ProductQuickShipOrderFrom=Exp\u00E9dition express de
 ProductRating=Taux
@@ -819,7 +821,7 @@ ProductRelationship=Relation
 ProductRemoveExpiredProductMembers=Supprimer tous les articles dont l'appartenance \u00E0 la cat\u00E9gorie est expir\u00E9
 ProductReorderQuantity=Quantit\u00E9 r\u00E9approvisionnement
 ProductReplaceOriginal=Remplacer l'original
-ProductRequireAmount=Montant demand\u00E9
+ProductRequireAmount=Quantit\u00E9e demand\u00E9e
 ProductRequireCustomerAmount=Demandera au client de fixer un montant
 ProductRequireInventory=Inventaire requis
 ProductRequireInventoryForPurchase=Stock de r\u00E9serve des achats
@@ -838,7 +840,10 @@ ProductReturnNumber=Num\u00E9ro du retour
 ProductReturnToEditProduct=Retour \u00E0 l'\u00E9dition d'article
 ProductReturnToEditProductFeatures=Retour \u00E0 l'\u00E9dition des caract\u00E9ristiques de l'article
 ProductReturnToReceiving=Retour \u00E0 la r\u00E9ception
+ProductReturnable=Article retournable
+ProductReturned=Retourn\u00E9
 ProductReWeighPackage=Repeser le paquet
+ProductReviews=Sondages
 ProductRollup=Nomenclature
 ProductRollups=Nomenclatures
 ProductRollupShort=Nomencl.
@@ -850,9 +855,9 @@ ProductRuleName=Nom de la r\u00E8gle
 ProductRuleNameFromDateThruDate=Nom de la r\u00E8gle, de la date, jusqu'\u00E0 la date
 ProductRules=R\u00E8gles
 ProductSaleRule=R\u00E8gles de vente
-ProductSalesDiscontinuationNotAvailable=Fermer la vente quand stock vide
+ProductSalesDiscontinuationNotAvailable=Escompte si stock vide
 ProductSalesTax=R\u00E8gles de taxe
-ProductSalesThruDate=R\u00E8gles jusqu'\u00E0 la date
+ProductSalesThruDate=jusqu'\u00E0 la date
 ProductSearchCatalog=Recherche catalogue
 ProductSearchinCategory=Recherche dans cat\u00E9gorie
 ProductSearchProducts=Rechercher l'article
@@ -918,7 +923,7 @@ ProductStockMoves=Mouvements de stocks
 ProductStockMovesNeeded=Mouvement de stock n\u00E9cessaire
 ProductStore=Centre de profit
 ProductStoreId=R\u00E9f du centre de profit
-ProductStoreKeywordOverrides=%Remplace le mot-cl\u00E9 de magasin %
+ProductStoreKeywordOverrides=Remplace les mots-cl\u00E9s pour le centre de profit
 ProductStoreName=Nom du centre de profit
 ProductStoreNameId=Nom du centre de profit (r\u00E9f)
 ProductStoreShipmentMethodAssociations=Mode d'exp\u00E9dition associ\u00E9 au centre de profit
@@ -953,6 +958,7 @@ ProductText=Texte
 ProductTextDataResourceId=R\u00E9f. de la ressource texte
 ProductTheFileOnYourComputer=Le fichier de votre poste
 ProductTheUrlOfYourUploadedFile=L'URL du fichier charg\u00E9
+ProductThesaurus=Th\u00E9saurus
 ProductThisIsIt=c'est celui-l\u00E0
 ProductThruDateAmountSequenceApplicationType=jusqu'\u00E0 la date; quantit\u00E9; s\u00E9quence; type d'application
 ProductThruDateTimePrice=jusqu'\u00E0 la date et l'heure, le prix
