New internalNote flag on OrderNote to indicate if the note is internal.  PDF of order page will hide these.  Thanks for Jean-Luc Malet and his OFBIZ-326 contribution
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5327 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels_fr.properties
+++ b/applications/order/config/OrderUiLabels_fr.properties
@@ -58,6 +58,8 @@ OrderGiftWrapAllItems = Toute promotion
 OrderGrandTotal = Total G\u00E9n\u00E9ral
 OrderImage = Image
 OrderInProgress = En cours
+OrderInternalNote = Note interne
+OrderInternalNoteMessage = Si oui est s\u00E9lectionn\u00E9, cette note ne sera pas imprim\u00E9e sur les documents
 OrderInvoices = Factures
 OrderIsThisGift = Est-ce une promotion?
 OrderIssuedToShipmentItem = Provient de l'article d'exp\u00E9dition
@@ -86,6 +88,7 @@ OrderNoRequestFound = Aucune demande trouv\u00E9e
 OrderNoReturnFound = Aucun retour.
 OrderNoReturnFoundWithId = Aucun retour trouv\u00E9 avec cette r\u00E9f\u00E9rence.
 OrderNoRolesAssociatedRequest = Aucun r\u00F4le associ\u00E9 avec cette demande de client
+OrderNotPrintableNote=Note non imprimable
 OrderNotShipped = Non Livr\u00E9
 OrderNotUsedForPurchase = Non utilis\u00E9 pour Achats
 OrderNotUsedForSales = Non utilis\u00E9 pour les Ventes
@@ -154,6 +157,7 @@ OrderOriginFacility = Magasin d'origine
 OrderPONumber = R\u00E9f. Commande d'achat
 OrderPaymentOfflineCheckMoney = Paiement en diff\u00E9r\u00E9:  V\u00E9rifiez le mandat
 OrderPrice = Prix
+OrderPrintableNote=Note imprimable
 OrderProductStore = Centre de profit
 OrderPromotionCouponCodes = Promotion/Coupon Codes
 OrderPurchaseOrder = Commande d'achat
