Appled l10n patches from Jacques Le Roux; Jira #OFBIZ-339
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5342 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/CommonUiLabels_de.properties
+++ b/framework/common/config/CommonUiLabels_de.properties
@@ -6,7 +6,7 @@ CommonAccounting=Buchhaltung
 CommonActiveInactive=Aktiv und inaktiv
 CommonActiveOnly=Nur aktiv
 CommonAdd=Hinzuf\u00FCgen
-CommonAddA=Hinzuf\u00FCgen\: 
+CommonAddA=Hinzuf\u00FCgen:
 CommonAddDefault=Voreinstellung hinzuf\u00FCgen
 CommonAddId=ID hinzuf\u00FCgen
 CommonAddNew=Neu hinzuf\u00FCgen
@@ -94,8 +94,8 @@ CommonFollowingErrorsOccurred=Folgende Fehler sind aufgetreten
 CommonFollowingOccurred=Folgendes ist aufgetreten
 CommonFor=f\u00FCr
 CommonForgotYourPassword=Sie haben Ihr Passwort vergessen
-CommonFormatDateFieldNotCorrect=Der Inhalt eines Datumfeldes ist fehlerhaft. Das Eingabeformat lautet tt-MM-JJJJ HH\:mm\:ss
-CommonFormatDateTime=tt-MM-JJJJ HH\:mm\:ss
+CommonFormatDateFieldNotCorrect=Der Inhalt eines Datumfeldes ist fehlerhaft. Das Eingabeformat lautet tt-MM-JJJJ HH:mm:ss
+CommonFormatDateTime=tt-MM-JJJJ HH:mm:ss
 CommonFound=Gefunden
 CommonFriday=Freitag
 CommonFrom=Von
@@ -266,7 +266,6 @@ CommonViewCalendar=Kalender einsehen
 CommonWednesday=Mittwoch
 CommonWeek=Woche
 CommonWelcome=Willkommen
-CommonWednesday=Mittwoch
 CommonWhere=Wo
 CommonWorkflowActivityUser=Dem Nutzer zugeordnete Workflow-Aktivit\u00E4ten
 CommonWorkflowActivityUserRole=Der Nutzerrolle zugeordnete Workflow-Aktivit\u00E4ten
