--- a/framework/common/config/CommonUiLabels_fr.properties
+++ b/framework/common/config/CommonUiLabels_fr.properties
@@ -40,15 +40,15 @@ CommonAddA=Ajouter un
 CommonAddDefault=Ajouter les valeurs par d\u00E9faut
 CommonAddId=Ajouter la r\u00E9f\u00E9rence
 CommonAddNew=Ajouter un nouveau
-CommonAddProblem=Probl\u00e8me de cr\u00e9ation
+CommonAddProblem=Probl\u00E8me de cr\u00E9ation
 CommonAddress1=Adresse 1
 CommonAddress2=Adresse 2
 CommonAddressLine=Adresse
 CommonAddresses=Adresses
 CommonAll=Tous
-CommonAllDay=Journ\u00E9e enti\u00e8re
+CommonAllDay=Journ\u00E9e enti\u00E8re
 CommonAllMethods=Toutes les m\u00E9thodes
-CommonAllWeek=Semaine enti\u00e8re
+CommonAllWeek=Semaine enti\u00E8re
 CommonAllowSolicitation=Accepte les sollicitations
 CommonAmount=Quantit\u00E9
 CommonAnd=Et
@@ -56,7 +56,7 @@ CommonAny=Tous
 CommonAnyOrderStatus=Tous statuts
 CommonAnyOrderType=Tous types
 CommonAnyReturnStatus=Tous Statuts
-CommonAnyRoleType=Tous R\u00f4les
+CommonAnyRoleType=Tous R\u00F4les
 CommonAnyStore=Tous magasins
 CommonAnyWebSite=Tout Sites
 CommonApply=Valider
@@ -129,7 +129,7 @@ CommonEmailType=Email type
 CommonEmails=Adr. courriel
 CommonEnabled=Disponible
 CommonEndDateTime=Date/Heure de fin
-CommonEventDate=Date de l'\u00e9v\u00e9nement
+CommonEventDate=Date de l'\u00E9v\u00E9nement
 CommonExpire=Expiration
 CommonExpireAll=Expirer tous
 CommonExpireDate=Date d'expiration
@@ -144,7 +144,7 @@ CommonFollowingErrorsOccurred=Les erreurs suivantes sont apparues
 CommonFollowingOccurred=Ce qui suit s'est produit
 CommonFor=pour
 CommonForgotYourPassword=Vous avez oubli\u00E9 votre mot de passe
-CommonFormatDateFieldNotCorrect=La saisie d'un champ de date est incorrecte, le format doit-\u00eatre AAAA-mm-jj HH:mm:ss
+CommonFormatDateFieldNotCorrect=La saisie d'un champ de date est incorrecte, le format doit-\u00EAtre AAAA-mm-jj HH:mm:ss
 CommonFormatDateTime=AAAA-MM-JJ  /  hh:mm:ss
 CommonFound=Trouv\u00E9
 CommonFriday=vendredi
@@ -213,7 +213,7 @@ CommonNoAddress=Aucune adresse
 CommonNoContactInformationOnFile=Pas d'information du contact sur le fichier
 CommonNoElementFound=aucun \u00E9l\u00E9ment trouv\u00E9
 CommonNoParent=Pas de parent
-CommonNoTaskAssigned=Vous n'avez actuellement aucune t\u00e2che \u00E0 votre attention.
+CommonNoTaskAssigned=Vous n'avez actuellement aucune t\u00E2che \u00E0 votre attention.
 CommonNone=Aucun
 CommonNot=Pas
 CommonNotModifRecreat=Ne peut \u00EAtre modifi\u00E9 sauf re-cr\u00E9ation
@@ -247,7 +247,7 @@ CommonQualifier=Qualifier
 CommonQuantity=Quantit\u00E9
 CommonQuarter=Trimestre
 CommonQuickAdd=Ajout rapide
-CommonQuickAddList=Ajout rapide \u00e0 la liste
+CommonQuickAddList=Ajout rapide \u00E0 la liste
 CommonReady=Pr\u00EAt
 CommonReceive=Recevoir
 CommonReceived=Re\u00E7u
@@ -272,7 +272,7 @@ CommonSavings=Sauvegardes
 CommonSearch=Rechercher
 CommonSearchResultfor=Rechercher les r\u00E9sultats pour
 CommonSecurity=S\u00E9curit\u00E9
-CommonSelectAll=Tout s\u00e9lectionner 
+CommonSelectAll=Tout s\u00E9lectionner
 CommonSelectOne=S\u00E9lectionnez en une
 CommonSelected=S\u00E9lectionner
 CommonSelection=S\u00E9lection
@@ -280,14 +280,14 @@ CommonSend=Envoyer
 CommonSendDate=Date d'envoi
 CommonSendEmail=Envoyer email
 CommonSeptember=Septembre
-CommonSequence=s\u00e9quence
+CommonSequence=s\u00E9quence
 CommonSequenceNum=N\u00B0 de s\u00E9quence
 CommonSet=Set
 CommonSetNowEmpty=(Sera positionn\u00E9 \u00E0 aujourd'hui si vide)
 CommonShow=Montrer
 CommonShowAll=Montrer tout
 CommonShowAllRecords=Montrer tous les enregistrements
-CommonShowLookupFields=Montrer les zones de s\u00e9lection
+CommonShowLookupFields=Montrer les zones de s\u00E9lection
 CommonSince=Depuis
 CommonSmall=Petit
 CommonSorryYouCannotSend=D\u00E9sol\u00E9, vous ne pouvez envoyer cette page \u00E0 un ami. S\u00E9lectionnez plut\u00F4t \u00E0 partir d'un cat\u00E9gorie ou d'un article
@@ -302,7 +302,7 @@ CommonSubTitle=Sous-titre
 CommonSubTotal=Sous-total
 CommonSubmit=Soumettre
 CommonSunday=dimanche
-CommonTellAFriend=Dites-le \u00e0 un ami
+CommonTellAFriend=Dites-le \u00E0 un ami
 CommonTest=Test
 CommonThe=le
 CommonTheFollowingErrorsOccurred=Les erreurs suivantes sont apparues
@@ -328,20 +328,17 @@ CommonUpdate=Mettre \u00E0 jour
 CommonUpdateLink=Mettre \u00E0 jour le lien
 CommonUpdated=Mise \u00E0 jour
 CommonUpdatedEffectiveThru=Mise \u00E0 jour effective \u00E0 travers
-CommonUsed=Utilis\u00e9
-CommonUsedAs=Utilis\u00e9 comme
+CommonUsed=Utilis\u00E9
+CommonUsedAs=Utilis\u00E9 comme
 CommonUsername=Nom d'utilisateur
+CommonValidFromDate=Valide \u00E0 partir de
+CommonValidThruDate=Valide jusqu'\u00E0
 CommonValidate=Valider
-CommonValidFromDate=Valide \u00e0 partir de
-CommonValidityProblem=Probl\u00e8me de validit\u00E9
-CommonValidThruDate=Valide jusqu'\u00e0 
-+CommonValidThruDate=Valide jusqu'\u00e0
 CommonValidityProblem=Probleme de validit\u00E9
 CommonValue=Valeur
 CommonView=Voir
-CommonViewRequest=Voir la requ\u00eate
 CommonViewCalendar=Voir le calendrier
-CommonViewRequest=Voir la requ\u00eate
+CommonViewRequest=Voir la requ\u00EAte
 CommonVolume=Volume
 CommonWednesday=mercredi
 CommonWeek=semaine
@@ -370,14 +367,14 @@ PartyPartyID=R\u00E9f. d'acteur
 WebTools=Adm. Sys.
 WorkEffort=T\u00E2che
 bu=bulgare
-cz=tch\u00e8que
+cz=tch\u00E8que
 de=allemand
 en=anglais
 en_GB=anglais GB
 es=espagnol
-fr=fran\u00e7ais
+fr=fran\u00E7ais
 gr=grec
 pt=portugais
+pt_BR=portugais Br\u00E9sil
 pt_PT=portugais Portugal
-pt_BR=portugais Br\u00e9sil
 zh=chinois
