Various i18n/l10n corrections from Jacques Le Roux; Jira #OFBIZ-367
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5381 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/ecommerce/config/EcommerceUiLabels_fr.properties
+++ b/applications/ecommerce/config/EcommerceUiLabels_fr.properties
@@ -265,7 +265,7 @@ EcommerceUnitPrice=Prix unitaire
 EcommerceUnsupportedQuestionType=Type de question non support\u00E9
 EcommerceUpdateSurvey="[Mettre \u00E0 jour le commentaire]"
 EcommerceUploadNewFile=T\u00E9l\u00E9chargez un nouveau fichier
-EcommerceUseEmailAddress=EcommerceStartdate
+EcommerceUseEmailAddress=Utiliser adr. courriel
 EcommerceVariationToCart=de la variation au panier
 EcommerceViewAll=Voir tout
 EcommerceViewAllPromotions=Voir toutes les promotions
