Added lookup page for facilities: thanks to Buxerolles for the patch (part of OFBIZ-389).
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5488 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels_fr.properties
+++ b/applications/product/config/ProductUiLabels_fr.properties
@@ -391,6 +391,7 @@ ProductEditProductWithProductId=Edition de l'article avec sa r\u00E9f\u00E9rence
 ProductEditShipment=Edition de l'exp\u00E9dition
 ProductEntireCatalog=Catalogue entier
 ProductErrorFacility=Erreur: donn\u00E9e stock
+ProductErrorFacilityIdNotFound=ERREUR: stock non trouv\u00e9 avec la r\u00e9f\u00e9rence [${facilityId}]
 ProductErrorNoPackagesFoundForShipment=ERREUR : Pas de paquets trouv\u00E9s pour cette exp\u00E9dition
 ProductErrorOrderIdNotFound=Erreur : commande non trouv\u00E9e avec la r\u00E9f\u00E9rence [${orderId}]
 ProductErrorProductNotFound=ERREUR: Article non trouv\u00E9
