Internationalization patches from Tarlika Erika Schmidt, OFBIZ-450
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5632 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels_fr.properties
+++ b/applications/order/config/OrderUiLabels_fr.properties
@@ -67,6 +67,7 @@ OrderItemTotal = Total Article
 OrderItemsOrdered = Produits command\u00E9s
 OrderItemsReturned = Produits retourn\u00E9s
 OrderItemsSubTotal = Sous-Total articles
+OrderJurisdiction=Juridiction
 OrderLookupOrder = Lancer recherche commande(s)
 OrderLookupReturn = Lancer recherche retour(s)
 OrderManagerApplication = Gestion de Commandes
