Modified label names for actual and estimated times in production run's forms to improve undestandability. Thanks to Si Chen for the suggestions.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5671 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/manufacturing/config/ManufacturingUiLabels_it.properties
+++ b/applications/manufacturing/config/ManufacturingUiLabels_it.properties
@@ -145,13 +145,13 @@ ManufacturingRoutingTaskCopiedSuccessfully=Operazione copiata con successo
 
 ManufacturingTaskName=Nome Operazione
 
-ManufacturingTaskEstimatedSetupMillis=Tempo di setup
+ManufacturingTaskEstimatedSetupMillis=Tempo stimato di setup
 
 ManufacturingFindRoutingTasks=Cerca Operazioni
 
 PageTitleFieldLookup=Ricerca Campo
 
-ManufacturingTaskEstimatedMilliSeconds=Tempo di Esecuzione
+ManufacturingTaskEstimatedMilliSeconds=Tempo stimato di Esecuzione
 
 PageTitleEditRoutingTaskAssoc=Modifica Legami tra Operazioni
 
@@ -251,9 +251,9 @@ ManufacturingFromDate=From Date
 
 ManufacturingToDate=To Date
 
-ManufacturingAddSetupTime=Add Setup Time
+ManufacturingAddSetupTime=Add Actual Setup Time
 
-ManufacturingAddTaskTime=Add Task Time
+ManufacturingAddTaskTime=Add Actual Task Time
 
 ManufacturingAddQuantityProduced=Add Qty Produced
 
