Some order and general i18n/l10n improvements from buxerolles, Jira #OFBIZ-461
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5676 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels_fr.properties
+++ b/applications/order/config/OrderUiLabels_fr.properties
@@ -99,6 +99,8 @@ OrderNotesCreateNew = Cr\u00E9er une nouvelle note
 OrderNotesForRequestItem = Notes pour une demande d'article
 OrderOfflineCheckMoney = En diff\u00E9r\u00E9:  V\u00E9rifiez le mandat
 OrderOrder = Commande
+OrderOrderBillFromParty = Acteur D\u00e9bit\u00e9
+OrderOrderBillToParty = Acteur Cr\u00e9dit\u00e9
 OrderOrderConfirmation = Confirmation de la commande
 OrderOrderDate = Date de la commande
 OrderOrderEntry = Cr\u00E9ation
@@ -147,9 +149,9 @@ OrderOrderReturn = Retour
 OrderOrderReturns = Retours
 OrderOrderShortcuts = Raccourcis
 OrderOrderTasks = T\u00E2ches de commande
-OrderOrderTermDays = %Jours limite (ou d\u00E9lai en jours)%
-OrderOrderTermType = Type de limite
-OrderOrderTermValue = %Valeur Limite%
+OrderOrderTermDays = Jours d'\u00e9ch\u00e9ance
+OrderOrderTermType = Type
+OrderOrderTermValue = Valeur
 OrderOrderTerms = Conditions d'ordre
 OrderOrderTotal = Total commande
 OrderOrderType = Type d'ordres
@@ -222,6 +224,7 @@ OrderTotalOtherOrderAdjustments = Total de l'ajustement des autres lignes
 OrderTotalSalesTax = Total T.V.A.
 OrderTotalShippingAndHandling = Total exp\u00E9dition et manipulation
 OrderTrackingNumber = N\u00B0 de tra\u00E7age
+OrderTrackingCode=Code de suivi
 OrderUnitList = Unit\u00E9 / Liste
 OrderUseDefaultComment = Utiliser par d\u00E9faut le commentaire pour les autres lignes
 OrderUseDefaultDesiredDeliveryDate = Utiliser par d\u00E9faut la date de livraison souhait\u00E9e pour les autres lignes
