--- a/framework/common/config/CommonUiLabels_fr.properties
+++ b/framework/common/config/CommonUiLabels_fr.properties
@@ -61,6 +61,7 @@ CommonAnyStore=Tous magasins
 CommonAnyWebSite=Tout Sites
 CommonApply=Valider
 CommonApril=avril
+CommonApproved=Approuv\u00E9
 CommonArea=Surface
 CommonAreaCode=Indicatif de zone
 CommonAssociate=associ\u00E9
@@ -76,6 +77,7 @@ CommonBackToOptions=Retour aux options
 CommonBenefit=Avantage
 CommonBy=De
 CommonCancel=Annuler
+CommonCancelled=Annul\u00E9
 CommonCancelAll=Tout annuler
 CommonChange=Modifier
 CommonChecked=V\u00E9rifi\u00E9
@@ -91,6 +93,7 @@ CommonCloseTab=+
 CommonComingSoon=\u00C7a arrive bient\u00F4t !
 CommonComment=Commentaire
 CommonComments=Commentaires
+CommonCompleted=Termin\u00E9
 CommonConfiguration=Configuration
 CommonContactMechID=Coordonn\u00E9e
 CommonContactPurpose=But du contact
@@ -242,6 +245,7 @@ CommonPermissionError=Erreur de droits d'acc\u00E8s, autorisations insuffisantes
 CommonPerson=Personne
 CommonPrevious=Pr\u00E9c\u00E9dent
 CommonPriority=Priorit\u00E9
+CommonProcessing=En cours
 CommonProfile=Profil
 CommonQualifier=Qualifier
 CommonQuantity=Quantit\u00E9
@@ -279,6 +283,7 @@ CommonSelection=S\u00E9lection
 CommonSend=Envoyer
 CommonSendDate=Date d'envoi
 CommonSendEmail=Envoyer email
+CommonSent=Envoy\u00E9
 CommonSeptember=Septembre
 CommonSequence=s\u00E9quence
 CommonSequenceNum=N\u00B0 de s\u00E9quence
