A number of patches from Yannick Thebault to modernize and internationalize various parts of the marketing application, plus added DataSource screens; Jira #OFBIZ-525
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6008 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/marketing/config/MarketingUiLabels_fr.properties
+++ b/applications/marketing/config/MarketingUiLabels_fr.properties
@@ -6,7 +6,7 @@
 MarketingCompanyName=OFBiz: Gestion du Marketing
 MarketingCompanySubtitle=Application de gestion du marketing de la solution ERP OFBiz Neogia
 
-ContactList=List de contacts
+ContactList=Liste de contacts
 ContactListCommEventCreate=Nouvel \u00e9v\u00e9nement de communication de la liste de contact
 ContactListCommEventId=Ev\u00e9nement de communication
 ContactListCommEventTypeId=R\u00e9f. du type d'\u00e9v\u00e9nement de communication
@@ -32,6 +32,8 @@ MarketingCampaignId=R\u00e9f. de campagne marketing
 MarketingCampaignName=Nom de la campagne
 MarketingCampaignRoleCreate=Nouveau r\u00f4le de la campagne marketing
 MarketingCampaignSummary=R\u00e9sum\u00e9 de la campagne
+MarketingMainPage=Principale
+MarketingManagerApplication=Application de gestion marketing
 MarketingParentCampaignId=R\u00e9f. de campagne parent
 MarketingViewPermissionError=Vous n'avez pas la permission de voir
 PageTitleAddContactList=Nouvelle liste de contact
@@ -60,6 +62,9 @@ PageTitleLookupContactList=Recherche liste de contact
 PageTitleEditSegmentGroupRole=Edition r\u00f4le de groupe de segment
 PageTitlePreferredContactMech=M\u00e9canisme de contact favori
 PageTitleFindContactListCommEvents=Recherche \u00e9v\u00e9nement de communication associ\u00e9s
+
+Segment=Segmentation
+SegmentGroupDescription=D\u00e9scription
 SegmentGroupCreate=Nouveau groupe de segment
 SegmentGroupClassCreate=Nouvelle classification de groupe de segment
 SegmentGroupGeoAbbr=Abbr\u00e9viation
@@ -80,3 +85,67 @@ SegmentGroupSegmentGroupLookup=Recherche
 SegmentGroupSegmentGroupType=Type
 SegmentGroupSegmentGroupTypeId=R\u00e9f. du type de groupe de segment
 SegmentGroupSegmentGroupRole=R\u00f4le
+
+ContactList=Liste de contacts
+
+MarketingMainPage=Principale
+MarketingManagerApplication=Application de gestion marketing
+PageTitleAddTrackingCode=Nouveau code de suivi
+PageTitleAddTrackingCodeType=Nouveau type de code de suivi
+PageTitleEditSegmentGroupClass=Edition des classification de groupe de segment
+PageTitleEditSegmentGroupGeo=Edition des zones g\u00e9ographiques de groupe de segment
+PageTitleEditSegmentGroupRole=Edition r\u00f4le de groupe de segment
+PageTitleEditTrackingCode=Edition d'un code de suivi
+PageTitleEditTrackingCodeOrder=Edition d'un ordre associ\u00e9 au code de suivi
+PageTitleEditTrackingCodeType=Edition d'un type de code de suivi
+PageTitleEditTrackingCodeVisit=Edition d'une visite associ\u00e9e au code de suivi
+PageTitleFindContactListCommEvents=Recherche \u00e9v\u00e9nement de communication associ\u00e9s
+PageTitleFindTrackingCodeOrder=Recherche ordres associ\u00e9s au code de suivi
+PageTitleFindTrackingCodeVisits=Recherche visites associ\u00e9es au code de suivi
+PageTitleListContactList=Liste des listes de contact
+PageTitleListContactListCommEvent=Liste des \u00e9v\u00e9nements de communication de la liste de contact
+PageTitleListContactListParty=Liste des acteurs de la liste de contact
+PageTitleListTrackingCode=Liste des codes de suivi
+PageTitleListTrackingCodeOrder=Liste des ordres associ\u00e9s
+PageTitleListTrackingCodeOrdersFor=Liste des ordres associ\u00e9s pour le
+PageTitleListTrackingCodeType=Liste des types de code de suivi
+PageTitleListTrackingCodeVisit=Liste des visite associ\u00e9es
+PageTitleListTrackingCodeFor=Liste des visite associ\u00e9es pour le
+PageTitleLookupTrackingCode=Recherche code de suivi
+PageTitleLookupTrackingCodeType=Recherche de type de code de suivi
+PageTitleLookupVisit=Recherche visite
+Tracking=Suivi
+TrackingCode=Code de suivi
+TrackingCodeBillableLifetime=Dur\u00e9e de vie facturable
+TrackingCodeComments=Commentaires
+TrackingCodeCreate=Nouveau code de suivi
+TrackingCodeDefaultProdCatalogId=R\u00e9f. du catalogue produit par d\u00e9fault
+TrackingCodeDescription=D\u00e9scription
+TrackingCodeGroupId=R\u00e9f. du groupe
+TrackingCodeInSeconds=en secondes
+TrackingCodeNoOverrideIfEmpty=Pas de remplacement (marque associ\u00e9e) si vide
+TrackingCodeNoRedirectIfEmpty=Pas de redirection si vide
+TrackingCodeOrder=Ordres associ\u00e9s
+TrackingCodeOrderIsBilliable=Facturable ?
+TrackingCodeOrderOrderId=R\u00e9f. de l'ordre
+TrackingCodeOverrideCss=URL de la CSS de remplacement
+TrackingCodeOverrideLogo=URL de l'image logo de remplacement
+TrackingCodeRedirectUrl=URL de redirection
+TrackingCodeSubgroupId=R\u00e9f. du sous-groupe
+TrackingCodeTrackableLifetime=Dur\u00e9e de vie du suivi
+TrackingCodeTrackingCodeId=R\u00e9f. du code de suivi
+TrackingCodeTrackingCodeTypeId=Type de code de suivi
+TrackingCodeType=Type de code de suivi
+TrackingCodeTypeCreate=Nouveau type de code de suivi
+TrackingCodeTypeDescription=D\u00e9scription
+TrackingCodeVisit=Visites associ\u00e9es
+TrackingCodeVisitClientHostName=Nom d'h\u00f4te du client
+TrackingCodeVisitClientIpAddress=Adresse IP du client
+TrackingCodeVisitContactMechTypeId=Type de M\u00e9canisme de contact
+TrackingCodeVisitPartyId=R\u00e9f. de l'acteur
+TrackingCodeVisitRoleTypeId=Type de r\u00f4le
+TrackingCodeVisitSessionId=R\u00e9f. de la session
+TrackingCodeVisitSourceEnumId=Source de la visite
+TrackingCodeVisitVisitId=R\u00e9f. de la visite
+TrackingCodeVisitVisitorId=R\u00e9f. du visiteur
+TrackingCodeVisitWebappName=Nom de l'application Web
