--- a/framework/common/config/CommonEntityLabels_fr.properties
+++ b/framework/common/config/CommonEntityLabels_fr.properties
@@ -353,3 +353,5 @@ StatusItem.description.WPS_RELEASED=Publi\u00e9
 StatusItem.description.WPS_UNDER_REVISION=En cours de r\u00e9vision
 StatusItem.description.WPS_UNDER_TEST=En cours de test
 StatusItem.description._NA_=Non applicable
+StatusType.description._NA_=Non Applicable
+StatusType.description.SYNCHRONIZE_STATUS=Synchronis\u00E9
