--- a/framework/common/config/CommonUiLabels_fr.properties
+++ b/framework/common/config/CommonUiLabels_fr.properties
@@ -50,15 +50,15 @@ CommonAllDay=Journ\u00E9e enti\u00E8re
 CommonAllMethods=Toutes les m\u00E9thodes
 CommonAllWeek=Semaine enti\u00E8re
 CommonAllowSolicitation=Accepte les sollicitations
-CommonAmount=Quantit\u00E9
-CommonAnd=Et
+CommonAmount=Montant
+CommonAnd=et
 CommonAny=Tous
 CommonAnyOrderStatus=Tous statuts
 CommonAnyOrderType=Tous types
 CommonAnyReturnStatus=Tous Statuts
 CommonAnyRoleType=Tous R\u00F4les
 CommonAnyStore=Tous magasins
-CommonAnyWebSite=Tout Sites
+CommonAnyWebSite=Tous sites
 CommonApply=Valider
 CommonApril=avril
 CommonApproved=Approuv\u00E9
@@ -70,16 +70,20 @@ CommonAttentionName=Nom d'attention
 CommonAttn=A l'attention de
 CommonAugust=Ao\u00FBt
 CommonAvailable=Disponible
+CommonAverage=Moyenne
 CommonBack=Retour
 CommonBackTo=Retour \u00E0
 CommonBackToList=Retour \u00E0 la liste
 CommonBackToOptions=Retour aux options
 CommonBenefit=Avantage
+CommonBut=mais
 CommonBy=De
 CommonCancel=Annuler
 CommonCancelled=Annul\u00E9
 CommonCancelAll=Tout annuler
+CommonCancelDone=Annuler / Terminer
 CommonChange=Modifier
+CommonChart=Graphiques
 CommonChecked=V\u00E9rifi\u00E9
 CommonChecking=Contr\u00F4le
 CommonCheckoutAnonymous=Validation en anonyme
@@ -89,14 +93,14 @@ CommonCity=Ville
 CommonClear=Effacer
 CommonClickHere=Cliquer ici
 CommonClose=Fermer
-CommonCloseTab=+
+CommonCloseTab=-
 CommonComingSoon=\u00C7a arrive bient\u00F4t !
 CommonComment=Commentaire
 CommonComments=Commentaires
 CommonCompleted=Termin\u00E9
 CommonConfiguration=Configuration
 CommonContactMechID=Coordonn\u00E9e
-CommonContactPurpose=But du contact
+CommonContactPurpose=Objet du contact
 CommonContactUs=Contactez-nous
 CommonContent=Contenu
 CommonContinue=Continuer
@@ -131,6 +135,7 @@ CommonEmailTo=Envoyer un email \u00E0
 CommonEmailType=Email type
 CommonEmails=Adr. courriel
 CommonEnabled=Disponible
+CommonEndDate=Date de fin
 CommonEndDateTime=Date/Heure de fin
 CommonEventDate=Date de l'\u00E9v\u00E9nement
 CommonExpire=Expiration
@@ -141,16 +146,16 @@ CommonExt=Ext.
 CommonFebruary=f\u00E9vrier
 CommonFieldsMarkedAreRequired=Les champs suivis d'une (*) sont obligatoires.
 CommonFind=Rechercher
-CommonFindAll=Rech. tous
+CommonFindAll=Rechercher tous
 CommonFinishDate=Date de fin
-CommonFollowingErrorsOccurred=Les erreurs suivantes sont apparues
+CommonFollowingErrorsOccurred=L'(les) erreur(s) suivante(s) a (ont) \u00E9t\u00E9 d\u00E9tect\u00E9e(s)
 CommonFollowingOccurred=Ce qui suit s'est produit
 CommonFor=pour
 CommonForgotYourPassword=Vous avez oubli\u00E9 votre mot de passe
 CommonFormatDateFieldNotCorrect=La saisie d'un champ de date est incorrecte, le format doit-\u00EAtre AAAA-mm-jj HH:mm:ss
 CommonFormatDateTime=AAAA-MM-JJ  /  hh:mm:ss
 CommonFound=Trouv\u00E9
-CommonFriday=vendredi
+CommonFriday=Vendredi
 CommonFrom=De
 CommonFromAddress=\u00E0 partir de l'adresse
 CommonFromDate=de la date
@@ -173,9 +178,9 @@ CommonIds=R\u00E9f\u00E9rences
 CommonInThe=Dans le
 CommonInformation=Information
 CommonInput=Saisie
-CommonInto=Dans
+CommonInto=dans
 CommonIntroductionDate=Date d'introduction
-CommonItem=ligne
+CommonItem=Ligne
 CommonJanuary=Janvier
 CommonJuly=Juillet
 CommonJune=Juin
@@ -200,7 +205,8 @@ CommonMayCreateNewAccountHere=Vous devez cr\u00E9er un nouveau compte
 CommonMedium=Moyen
 CommonMessage=Message
 CommonMethod=Mode d'envoi
-CommonMonday=lundi
+CommonModify=Modifier
+CommonMonday=Lundi
 CommonMonth=Mois
 CommonMore=Plus
 CommonMyStatus=Mon statut
@@ -214,15 +220,18 @@ CommonNext=Suivant
 CommonNo=Non
 CommonNoAddress=Aucune adresse
 CommonNoContactInformationOnFile=Pas d'information du contact sur le fichier
+CommonNoContains=Ne contient pas
 CommonNoElementFound=aucun \u00E9l\u00E9ment trouv\u00E9
 CommonNoParent=Pas de parent
 CommonNoTaskAssigned=Vous n'avez actuellement aucune t\u00E2che \u00E0 votre attention.
 CommonNone=Aucun
+CommonNoParent=Aucun parent
 CommonNot=Pas
-CommonNotModifRecreat=Ne peut \u00EAtre modifi\u00E9 sauf re-cr\u00E9ation
+CommonNotModifRecreat=Ne peut-\u00EAtre modifi\u00E9 sauf re-cr\u00E9ation
 CommonNotSet=Non choisi
 CommonNotYetImplemented=Pas encore d\u00E9velopp\u00E9 !
 CommonNotYou=Pas vous
+CommonNotShown=Non montr\u00E9
 CommonNote=Note
 CommonNotes=Notes
 CommonNovember=Novembre
@@ -232,21 +241,27 @@ CommonOf=De
 CommonOn=Sur
 CommonOpenNewWindow=Ouvrir une nouvelle fen\u00EAtre
 CommonOpenPageNewWindow=Ouvrir la page dans une nouvelle fen\u00EAtre
+CommonOpenPageNewW=Ouvrir la page dans une nouvelle fen\u00EAtre
 CommonOptions=Options
 CommonOr=Ou
 CommonOrder=Commande
+CommonOrderBy=Trier par
 CommonOrders=Commandes
 CommonOverridesSelection=\u00E9crase l'un ou l'autre des choix ci-dessus
 CommonPage=Page
-CommonPartyID=R\u00E9f. de l'acteur
+CommonPartyID=Identifiant de la personne
 CommonPassword=Mot de passe :
 CommonPerform=Ex\u00E9cuter
 CommonPermissionError=Erreur de droits d'acc\u00E8s, autorisations insuffisantes
 CommonPerson=Personne
+CommonPrepared=Pr\u00E9par\u00E9
 CommonPrevious=Pr\u00E9c\u00E9dent
 CommonPriority=Priorit\u00E9
 CommonProcessing=En cours
 CommonProfile=Profil
+CommonProsPrep=Pr\u00E9paration en cours 
+CommonProsReci=R\u00E9ception en cours 
+CommonPublish=Publi\u00E9
 CommonQualifier=Qualifier
 CommonQuantity=Quantit\u00E9
 CommonQuarter=Trimestre
@@ -256,6 +271,7 @@ CommonReady=Pr\u00EAt
 CommonReceive=Recevoir
 CommonReceived=Re\u00E7u
 CommonRed=Rouge
+CommonRefine=Affinez
 CommonRefresh=Rafra\u00EEchir
 CommonRegistred=Enregistrement connexion utilisateur
 CommonRejected=Refus\u00E9
@@ -270,14 +286,15 @@ CommonReturn=Retour
 CommonReturnStatus=Statut du retour
 CommonReview=Revoir
 CommonRun=D\u00E9marrer
-CommonSaturday=samedi
+CommonSaturday=Samedi
 CommonSave=Enregistrer
-CommonSavings=Sauvegardes
+CommonSavings=Sauvegarder
 CommonSearch=Rechercher
 CommonSearchResultfor=Rechercher les r\u00E9sultats pour
 CommonSecurity=S\u00E9curit\u00E9
+CommonSelect=S\u00E9lectionner
 CommonSelectAll=Tout s\u00E9lectionner
-CommonSelectOne=S\u00E9lectionnez en une
+CommonSelectOne=S\u00E9lectionner un(e)
 CommonSelected=S\u00E9lectionner
 CommonSelection=S\u00E9lection
 CommonSend=Envoyer
@@ -287,7 +304,7 @@ CommonSent=Envoy\u00E9
 CommonSeptember=Septembre
 CommonSequence=s\u00E9quence
 CommonSequenceNum=N\u00B0 de s\u00E9quence
-CommonSet=Set
+CommonSet=Action
 CommonSetNowEmpty=(Sera positionn\u00E9 \u00E0 aujourd'hui si vide)
 CommonShow=Montrer
 CommonShowAll=Montrer tout
@@ -306,46 +323,60 @@ CommonStatus=Statut
 CommonSubTitle=Sous-titre
 CommonSubTotal=Sous-total
 CommonSubmit=Soumettre
-CommonSunday=dimanche
+CommonSubmitted=Soumis
+CommonSunday=Dimanche
+CommonSwitchAllTableViewOff=Vue normale
+CommonSwitchAllTableViewOn=Vue \u00E9tendue
+CommonTally=Contr\u00F4le
 CommonTellAFriend=Dites-le \u00E0 un ami
 CommonTest=Test
 CommonThe=le
-CommonTheFollowingErrorsOccurred=Les erreurs suivantes sont apparues
-CommonTheFollowingOccurred=Ceci est advenu
+CommonText=Texte
+CommonTheFollowingErrorsOccurred=Les erreurs suivantes ont \u00E9t\u00E9 d\u00E9tect\u00E9es
+CommonTheFollowingOccurred=Information sur l'action effectu\u00E9e
 CommonTheFollowingRequiredFieldsWhereFoundEmpty=Les champs suivants sont vides
 CommonTheOpenForBusinessProject=Le Projet Open For Business
 CommonThis=Ce
 CommonThru=Jusqu'\u00E0
 CommonThruDate=Jusqu'\u00E0 la date
 CommonThruDateTime=jusqu'\u00E0 la date & l'heure
-CommonThursday=jeudi
+CommonThursday=Jeudi
 CommonTime=Heure
 CommonTitle=Titre
-CommonTo=\u00E0
-CommonToName=Au nom de
+CommonTitleDr=Dr
+CommonTitleMr=Mr
+CommonTitleMrs=Mme
+CommonTitleMs=Mlle
+CommonTo=Jusqu'\u00E0
 CommonToday=Aujourd'hui
+CommonToggle=Commuter
+CommonToName=Au nom de
 CommonTotal=Total
-CommonTuesday=mardi
-CommonUnitPrice=P.U.
+CommonTuesday=Mardi
+CommonUnitPrice=P. U.
 CommonUntil=jusqu'\u00E0
 CommonUom=Unit\u00E9 de mesure
+CommonUomUomId=R\u00E9f. de l'unit\u00E9 de mesure
+CommonUomAbbreviation=Abbreviation
+CommonUomDescription=Description
 CommonUpdate=Mettre \u00E0 jour
 CommonUpdateLink=Mettre \u00E0 jour le lien
 CommonUpdated=Mise \u00E0 jour
 CommonUpdatedEffectiveThru=Mise \u00E0 jour effective \u00E0 travers
+CommonUpload=T\u00E9l\u00E9charger
 CommonUsed=Utilis\u00E9
 CommonUsedAs=Utilis\u00E9 comme
 CommonUsername=Nom d'utilisateur
 CommonValidFromDate=Valide \u00E0 partir de
 CommonValidThruDate=Valide jusqu'\u00E0
 CommonValidate=Valider
-CommonValidityProblem=Probleme de validit\u00E9
+CommonValidityProblem=Probl\u00E8me de validit\u00E9
 CommonValue=Valeur
 CommonView=Voir
 CommonViewCalendar=Voir le calendrier
 CommonViewRequest=Voir la requ\u00EAte
 CommonVolume=Volume
-CommonWednesday=mercredi
+CommonWednesday=Mercredi
 CommonWeek=semaine
 CommonWeight=Poids
 CommonWelcome=Bienvenue
@@ -354,21 +385,38 @@ CommonWidth=Largeur
 CommonWorkflowActivityUser=Actions du workflow associ\u00E9s \u00E0 l'utilisateur
 CommonWorkflowActivityUserRole=Actions du workflow associ\u00E9s au r\u00F4le de l'utilisateur
 CommonY=O
+CommonYear=Ann\u00E9e
 CommonYes=Oui
-CommonYouremail=Votre email
+CommonYouremail=Votre courriel
 CommonZipPostalCode=Code postal
 Content=Contenu
+DataSource=Source de donn\u00E9es
+DataSourceCreate=Nouvelle source de donn\u00E9es
+DataSourceDataSourceDescription=D\u00E9scription
+DataSourceDataSourceId=R\u00E9f. de la source de donn\u00E9es
+DataSourceDataSourceTypeId=R\u00E9f. du type de source de donn\u00E9es
+DataSourceNoDataSourceFoundWithId=Pas de source de donn\u00E9es trouv\u00E9 pour cette r\u00E9f\u00E9rence
+DataSourceType=Type de source de donn\u00E9es
+DataSourceTypeCreate=Nouveau type de source de donn\u00E9es
+DataSourceTypeDescription=D\u00E9scription
 Facility=Stock
 Factoids=Le saviez-vous ?
 Manufacturing=Fabrication
 Marketing=Marketing
-MostRecentlyViewed=Vu r\u00E9cemment
+MostRecentlyViewed=Les plus vus r\u00E9cemment
 NoUomConversionFound=La relation de conversion des unit\u00E9s de mesure n'a pas \u00E9t\u00E9 trouv\u00E9e
 Order=Commande
+PageTitleAddDataSource=Ajout de source de donn\u00E9es
+PageTitleAddDataSourceType=Ajout de type de source de donn\u00E9es
+PageTitleEditDataSource=Edition de source de donn\u00E9es
+PageTitleEditDataSourceType=Edition de type de source de donn\u00E9es
+PageTitleListDataSource=Liste des sources de donn\u00E9es
+PageTitleListDataSourceType=Liste des types de source de donn\u00E9es
 Party=Acteur
 PartyContactMechID=R\u00E9f. de coordonn\u00E9es d'acteur
 PartyContactPurpose=But de contact d'un acteur
 PartyPartyID=R\u00E9f. d'acteur
+ServiceManagement=Service
 WebTools=Adm. Sys.
 WorkEffort=T\u00E2che
 bu=bulgare
